Configured to run all in sequence

--- a/RibbonInputs.ipynb
+++ b/RibbonInputs.ipynb
@@ -10,7 +10,6 @@
     "import pyodbc \n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
     "import sqlalchemy as sal\n",
     "from sqlalchemy import create_engine"
    ]
@@ -71,6 +70,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Fix any odd names in RC1 DF or simplify *This is currently a manual step)\n",
+    "RPC1RibbonInputDF.replace('CBa?', \"CBa\", inplace=True)\n",
+    "RPC1RibbonInputDF.replace('XCBbwf', \"CBb\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "RPC1RibbonInputDF.SourceParentLabel.value_counts()"
    ]
   },
@@ -104,8 +114,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Find all Labels\n",
-    "RC1RibbonInputDF.SourceParentLabel.value_counts()"
+    "#Fix all expanded names in RC! (subclasses of BCs beyond a and b are excluded in this analysis)\n",
+    "RC1RibbonInputDF.replace('CBa?', \"CBa\", inplace=True)\n",
+    "RC1RibbonInputDF.replace('CBa1', \"CBa\", inplace=True)\n",
+    "RC1RibbonInputDF.replace('CBa2', \"CBa\", inplace=True)\n",
+    "RC1RibbonInputDF.replace('CBa2-4', \"CBa\", inplace=True)\n",
+    "RC1RibbonInputDF.replace('CBb6', \"CBb\", inplace=True)\n",
+    "RC1RibbonInputDF.replace('CBb5', \"CBb\", inplace=True)\n",
+    "RC1RibbonInputDF.replace('CBbwf', \"CBb\", inplace=True)\n"
    ]
   },
   {
@@ -114,8 +130,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Fix any odd names in RC1 DF or simplify\n",
-    "RC1RibbonInputDF.replace('CBbwf', \"CBb\", inplace=True)"
+    "#Find all Labels\n",
+    "RC1RibbonInputDF.SourceParentLabel.value_counts()"
    ]
   },
   {
@@ -151,8 +167,8 @@
    "outputs": [],
    "source": [
     "#create simplified count-based DFs\n",
-    "SimpRPC1RibbonInputDF = RPC1RibbonInputDF.groupby(\"TargetParent\")[\"SourceParentLabel\"].value_counts().to_frame(name = 'counts').reset_index()\n",
-    "SimpRC1RibbonInputDF = RC1RibbonInputDF.groupby(\"TargetParent\")[\"SourceParentLabel\"].value_counts().to_frame(name = 'counts').reset_index()\n"
+    "SimpRPC1RibbonInputDF = RPC1RibbonInputDF.groupby(\"TargetParent\")[\"SourceParentLabel\"].value_counts().to_frame(name = 'RibbonInputCount').reset_index()\n",
+    "SimpRC1RibbonInputDF = RC1RibbonInputDF.groupby(\"TargetParent\")[\"SourceParentLabel\"].value_counts().to_frame(name = 'RibbonInputCount').reset_index()\n"
    ]
   },
   {
@@ -171,8 +187,8 @@
    "outputs": [],
    "source": [
     "df = SimpRPC1RibbonInputDF\n",
-    "df[\"TotalInput\"] = df.groupby('TargetParent')[\"counts\"].transform('sum')\n",
-    "df[\"PercentofInput\"] = df[\"counts\"] / df[\"TotalInput\"]*100\n",
+    "df[\"TotalInput\"] = df.groupby('TargetParent')[\"RibbonInputCount\"].transform('sum')\n",
+    "df[\"PercentofInput\"] = df[\"RibbonInputCount\"] / df[\"TotalInput\"]*100\n",
     "df[\"Volume\"]= 'RPC1'\n",
     "\n",
     "df"
@@ -185,8 +201,8 @@
    "outputs": [],
    "source": [
     "df = SimpRC1RibbonInputDF\n",
-    "df[\"TotalInput\"] = df.groupby('TargetParent')[\"counts\"].transform('sum')\n",
-    "df[\"PercentofInput\"] = df[\"counts\"] / df[\"TotalInput\"]*100\n",
+    "df[\"TotalInput\"] = df.groupby('TargetParent')[\"RibbonInputCount\"].transform('sum')\n",
+    "df[\"PercentofInput\"] = df[\"RibbonInputCount\"] / df[\"TotalInput\"]*100\n",
     "df[\"Volume\"]= 'RC1'\n",
     "\n",
     "df"
@@ -210,25 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CombinedRI = CombinedRI.rename({'counts':'TotalRibbonCount'}, axis = 'columns')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CombinedRI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.relplot(x=\"TotalRibbonCount\", y=\"PercentofInput\", hue=\"Volume\", style=\"SourceParentLabel\", data=CombinedRI);"
+    "sns.relplot(x=\"RibbonInputCount\", y=\"PercentofInput\", hue=\"Volume\", style=\"SourceParentLabel\", data=CombinedRI);"
    ]
   },
   {
@@ -244,9 +242,9 @@
     "CBa = CombinedRI.loc[CombinedRI.SourceParentLabel=='CBa']\n",
     "CBb = CombinedRI.loc[CombinedRI.SourceParentLabel=='CBb']\n",
     "\n",
-    "sns.displot(CombinedRI, x=RodBC.TotalRibbonCount, y=RodBC.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"RodBC Distributions\")\n",
-    "sns.displot(CombinedRI, x=CBa.TotalRibbonCount, y=CBa.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"CBa Distributions\")\n",
-    "sns.displot(CombinedRI, x=CBb.TotalRibbonCount, y=CBb.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"CBb Distributions\")\n",
+    "sns.displot(CombinedRI, x=RodBC.RibbonInputCount, y=RodBC.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"RodBC Distributions\")\n",
+    "sns.displot(CombinedRI, x=CBa.RibbonInputCount, y=CBa.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"CBa Distributions\")\n",
+    "sns.displot(CombinedRI, x=CBb.RibbonInputCount, y=CBb.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"CBb Distributions\")\n",
     "\n"
    ]
   }
