additional analyses added

--- a/RibbonInputs.ipynb
+++ b/RibbonInputs.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "#Fix any odd names in RC1 DF or simplify *This is currently a manual step)\n",
     "RPC1RibbonInputDF.replace('CBa?', \"CBa\", inplace=True)\n",
-    "RPC1RibbonInputDF.replace('XCBbwf', \"CBb\", inplace=True)"
+    "RPC1RibbonInputDF.replace('CBbwf', \"CBb\", inplace=True)"
    ]
   },
   {
@@ -91,6 +91,15 @@
    "outputs": [],
    "source": [
     "RPC1RibbonInputDF = RPC1RibbonInputDF.reset_index(drop = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RPC1RibbonInputDF[[\"SourceParentLabel\", \"PSDArea\"]].groupby(\"SourceParentLabel\").describe()"
    ]
   },
   {
@@ -121,7 +130,7 @@
     "RC1RibbonInputDF.replace('CBa2-4', \"CBa\", inplace=True)\n",
     "RC1RibbonInputDF.replace('CBb6', \"CBb\", inplace=True)\n",
     "RC1RibbonInputDF.replace('CBb5', \"CBb\", inplace=True)\n",
-    "RC1RibbonInputDF.replace('CBbwf', \"CBb\", inplace=True)\n"
+    "RC1RibbonInputDF.replace('CBbwf', \"CBb\", inplace=True)"
    ]
   },
   {
@@ -130,8 +139,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Find all Labels\n",
+    "RC1RibbonInputDF = RC1RibbonInputDF.reset_index(drop = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "RC1RibbonInputDF.SourceParentLabel.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = RPC1RibbonInputDF\n",
+    "df.loc[df[\"PSDArea\"].idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RPC1RibbonInputDF[[\"SourceParentLabel\", \"PSDArea\"]].groupby(\"SourceParentLabel\").describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RC1RibbonInputDF[[\"SourceParentLabel\", \"PSDArea\"]].groupby(\"SourceParentLabel\").describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RPC1RibbonInputDF[[\"SourceParentLabel\", \"PSDArea\"]].groupby(\"SourceParentLabel\").sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RC1RibbonInputDF[[\"SourceParentLabel\", \"PSDArea\"]].groupby(\"SourceParentLabel\").sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = plt.subplot()\n",
+    "sns.countplot(data=RPC1RibbonInputDF, x='SourceParent', order=RPC1RibbonInputDF.SourceParent.value_counts().index, hue=\"TargetParent\")\n",
+    "\n",
+    "ax.set_xticklabels(ax.get_xticklabels(), rotation=90, ha='right')\n",
+    "ax.legend(loc=\"upper right\")"
    ]
   },
   {
@@ -167,8 +243,8 @@
    "outputs": [],
    "source": [
     "#create simplified count-based DFs\n",
-    "SimpRPC1RibbonInputDF = RPC1RibbonInputDF.groupby(\"TargetParent\")[\"SourceParentLabel\"].value_counts().to_frame(name = 'RibbonInputCount').reset_index()\n",
-    "SimpRC1RibbonInputDF = RC1RibbonInputDF.groupby(\"TargetParent\")[\"SourceParentLabel\"].value_counts().to_frame(name = 'RibbonInputCount').reset_index()\n"
+    "RPC1InputDF = RPC1RibbonInputDF.groupby([\"TargetParent\",\"SourceParentLabel\"])[\"SourceParent\"].value_counts().to_frame(name = 'RibbonInputCount').reset_index()\n",
+    "RC1InputDF = RC1RibbonInputDF.groupby([\"TargetParent\",\"SourceParentLabel\"])[\"SourceParent\"].value_counts().to_frame(name = 'RibbonInputCount').reset_index()\n"
    ]
   },
   {
@@ -177,7 +253,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SimpRPC1RibbonInputDF"
+    "RPC1InputDF\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "RC1InputDF.groupby(\"TargetParent\")['SourceParentLabel'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "RPC1InputDF.groupby(\"TargetParent\")['SourceParentLabel'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AiiGJs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f, ax = plt.subplots()\n",
+    "sns.countplot(data = RPC1InputDF, x ='TargetParent', order=RPC1RibbonInputDF.TargetParent.value_counts().index, hue=\"SourceParentLabel\")\n",
+    "\n",
+    "ax.set_title(label=\"RPC1 Ribbon Input Sources\")\n",
+    "ax.set_xlabel('Target GAC Aii')\n",
+    "ax.legend(bbox_to_anchor=(1,0.5))\n",
+    "\n",
+    "g, ax2 = plt.subplots()\n",
+    "sns.countplot(data = RC1InputDF, x ='TargetParent', order=RC1RibbonInputDF.TargetParent.value_counts().index, hue=\"SourceParentLabel\")\n",
+    "\n",
+    "ax2.set_title(label=\"RC1 Ribbon Input Sources\")\n",
+    "ax2.set_xlabel('Target GAC Aii')\n",
+    "ax2.legend(bbox_to_anchor=(1,0.5))\n",
+    "\n",
+    "h, ax3 = plt.subplots()\n",
+    "sns.barplot(data= AiiGJs, x='TargetAii', y= \"GJCount\", hue = 'GJMotif')\n",
+    "ax3.set_title(label=\"GJ Motifs\")\n",
+    "ax3.set_xlabel('Target GAC Aii')\n",
+    "ax3.legend(bbox_to_anchor=(1,1))"
    ]
   },
   {
@@ -214,7 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frames = [SimpRC1RibbonInputDF, SimpRPC1RibbonInputDF]\n",
+    "frames = [SimpRPC1RibbonInputDF, SimpRC1RibbonInputDF]\n",
     "CombinedRI = pd.concat(frames).reset_index()\n",
     "\n",
     "CombinedRI"
@@ -244,7 +376,94 @@
     "\n",
     "sns.displot(CombinedRI, x=RodBC.RibbonInputCount, y=RodBC.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"RodBC Distributions\")\n",
     "sns.displot(CombinedRI, x=CBa.RibbonInputCount, y=CBa.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"CBa Distributions\")\n",
-    "sns.displot(CombinedRI, x=CBb.RibbonInputCount, y=CBb.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"CBb Distributions\")\n",
+    "sns.displot(CombinedRI, x=CBb.RibbonInputCount, y=CBb.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"CBb Distributions\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AiiGJs =pd.read_excel('D:\\Documents\\Data\\RPC1\\Aii_GAC_Project\\dfExports\\AiiGJstats.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CombinedRI.drop(columns=[\"index\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CombinedRI.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CombinedRI.rename(columns={'RibbonInputCount':'RICount'}, inplace= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Aii_Aii = AiiMerged.loc[AiiMerged.GJMotif=='GAC Aii::GAC Aii']\n",
+    "RodBCInput = AiiMerged.loc[AiiMerged.SourceParentLabel=='RodBC']\n",
+    "\n",
+    "Aii_Aii.reset_index(drop=True, inplace=True)\n",
+    "RodBCInput.reset_index(drop=True, inplace=True)\n",
+    "Aii_Aii.update(RodBCInput)\n",
+    "Aii_Aii\n",
+    "#RodBCInput"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CombinedRI\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#RPC1 = AiiMerged.loc[AiiMerged.Volume=='RPC1']\n",
+    "#RC1 = AiiMerged.loc[AiiMerged.Volume=='RC1']\n",
+    "Aii_Aii = AiiMerged.loc[AiiMerged.GJMotif=='GAC Aii::GAC Aii']\n",
+    "RodBCInput = AiiMerged.loc[AiiMerged.SourceParentLabel=='RodBC']\n",
+    "Aii_RodBC=AiiMerged.loc[AiiMerged.GJMotif=='GAC Aii::RodBC']\n",
+    "\n",
+    "\n",
+    "Aii_RodBC.reset_index(drop=True, inplace=True)\n",
+    "Aii_Aii.reset_index(drop=True, inplace=True)\n",
+    "RodBCInput.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "CombinedDF = RodBCInput\n",
+    "CombinedDF.update(Aii_RodBC)\n",
+    "CombinedDF.dropna(inplace=True)\n",
+    "\n",
+    "sns.scatterplot(\"PercentofRI\", \"PercentofGJInput\", data = CombinedDF, hue=\"TargetAii\", palette=\"Set2\")\n",
+    "\n",
     "\n"
    ]
   }
