--- a/GJPartners.ipynb
+++ b/GJPartners.ipynb
@@ -3,14 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -24,7 +21,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#Connect to Data Structure for sqlalchemy is: \"mssql+pyodbc://OpR-Marc-DB2:1433/RPC1?driver=ODBC+Driver+17+for+SQL+Server\" --change RPC1 for other volumes\n",
@@ -39,7 +40,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "RPC1AiiGJPartnersDF = pd.DataFrame()\n",
@@ -49,7 +54,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "RC1Aiis= [\"514\", \"3679\", \"2610\", \"410\"]\n",
@@ -59,7 +68,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#Pull Data from RPC1\n",
@@ -78,7 +91,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#Pull Data from RC1\n",
@@ -96,7 +113,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#concatinate the 2 datasets\n",
@@ -107,7 +128,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = AiiGJPartnersDF\n",
@@ -118,7 +143,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "AiiGJPartnersDF.fillna('Unk', inplace=True)"
@@ -127,7 +156,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = AiiGJPartnersDF\n",
@@ -137,7 +170,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "AiiGJPartnersDF = AiiGJPartnersDF.drop(columns=['Notes'])"
@@ -146,11 +183,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#These are all of the motif variations, not super clean\n",
     "\n",
+    "AiiGJPartnersDF.replace('Aii::GAC Aii','GAC Aii::GAC Aii', inplace=True)\n",
     "AiiGJPartnersDF.replace('CBb::GAC Aii','GAC Aii::CBb', inplace=True)\n",
     "AiiGJPartnersDF.replace('RodBC::GAC Aii','GAC Aii::RodBC', inplace=True)\n",
     "AiiGJPartnersDF.replace('BC::GAC Aii','GAC Aii::BC', inplace=True)\n",
@@ -158,6 +200,8 @@
     "AiiGJPartnersDF.replace('::GAC Aii','GAC Aii::Unk', inplace=True)\n",
     "AiiGJPartnersDF.replace('Unk::GAC Aii','GAC Aii::Unk', inplace=True)\n",
     "AiiGJPartnersDF.replace('GAC Aii::','GAC Aii::Unk', inplace=True)\n",
+    "AiiGJPartnersDF.replace('unk::GAC Aii','GAC Aii::Unk', inplace=True)\n",
+    "AiiGJPartnersDF.replace('GAC Aii::ull','GAC Aii::Unk', inplace=True)\n",
     "AiiGJPartnersDF.replace('NULL::GAC Aii','GAC Aii::Unk', inplace=True)\n",
     "AiiGJPartnersDF.replace('AC::GAC Aii','GAC Aii::AC', inplace=True)\n",
     "AiiGJPartnersDF.replace('yAC::GAC Aii','GAC Aii::yAC', inplace=True)\n",
@@ -167,12 +211,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Test of query cleaness, don't need to run this everytime\n",
     "df = AiiGJPartnersDF\n",
-    "duplicates = df[df.duplicated('SourceID')]\n",
+    "duplicates = df[df.duplicated(subset=['SourceID','AiiQueried'])]\n",
     "\n",
     "duplicates"
    ]
@@ -180,12 +228,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = AiiGJPartnersDF\n",
     "\n",
-    "AiiGJNoDuplicates= pd.DataFrame(df.drop_duplicates('SourceID').reset_index())\n",
+    "AiiGJNoDuplicates= pd.DataFrame(df.drop_duplicates(subset=['SourceID','AiiQueried']).reset_index())\n",
     "\n",
     "df"
    ]
@@ -193,7 +245,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "AiiGJNoDuplicates"
@@ -205,13 +261,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "AiiGJNoDuplicates.AiiQueried.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
     "AiiGJPartnersDF.groupby(\"AiiQueried\")['GJMotif'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "AiiGJNoDuplicates.GJMotif.value_counts()"
@@ -221,6 +294,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "AiiGJNoDuplicates.loc[AiiGJNoDuplicates['GJMotif'] == 'GAC Aii::Unk']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "f, ax = plt.subplots()\n",
@@ -238,7 +324,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "SimpAiiGJPartnerDF = AiiGJPartnersDF.groupby([\"AiiQueried\", 'Volume'])[\"GJMotif\"].value_counts().to_frame(name = 'GJCount').reset_index()\n",
@@ -248,7 +338,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = SimpAiiGJPartnerDF\n",
@@ -259,7 +353,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "SimpAiiGJPartnerDF"
@@ -268,7 +366,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "sns.relplot(x=\"GJCount\", y=\"PercentofInput\", hue=\"Volume\", style=\"GJMotif\", data=SimpAiiGJPartnerDF);"
@@ -277,7 +379,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "RodBCGJs=AiiGJPartnersDF.loc[AiiGJPartnersDF.GJMotif=='GAC Aii::RodBC'].reset_index()\n",
@@ -287,7 +393,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "RPC1 = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.Volume=='RPC1']\n",
@@ -304,20 +414,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#Use this if/when you want to export something to an excel file\n",
-    "Aii_GJ = SimpAiiGJPartnerDF.to_excel('D:\\Documents\\Data\\RPC1\\Aii_GAC_Project\\dfExports\\AiiGJstats.xlsx')"
+    "Aii_GJ = AiiGJNoDuplicates.to_excel('D:\\Documents\\Data\\RPC1\\Aii_GAC_Project\\dfExports\\AiiGJPartners.xlsx')"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "04635d289a519a1410467dd0afb0db42f9184808881ca68b2eb5a687a20a5a94"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -331,9 +442,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
