--- a/RibbonInputs.ipynb
+++ b/RibbonInputs.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -17,7 +21,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#Connect to Data Structure for sqlalchemy is: \"mssql+pyodbc://OpR-Marc-DB2:1433/RPC1?driver=ODBC+Driver+17+for+SQL+Server\" --change RPC1 for other volumes\n",
@@ -32,7 +40,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "RPC1RibbonInputDF = pd.DataFrame()\n",
@@ -42,7 +54,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "RC1Aiis= [\"514\", \"3679\", \"2610\", \"410\"]\n",
@@ -52,13 +68,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#Pull Data from RPC1\n",
     "for x in RPC1Aiis: \n",
     "    query = \"SET NOCOUNT ON; EXEC RLPfeiffer.RibbonInputs @TargetCell= \" + \"'\" + x + \"'\"\n",
     "    RI = pd.read_sql(query, con = RPC1)\n",
+    "    RI['Volume']= 'RPC1'\n",
     "    RPC1RibbonInputDF = RPC1RibbonInputDF.append(RI)\n",
     "\n",
     "RPC1RibbonInputDF"
@@ -67,7 +88,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#Fix any odd names in RC1 DF or simplify *This is currently a manual step)\n",
@@ -78,7 +103,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "RPC1RibbonInputDF.SourceParentLabel.value_counts()"
@@ -90,13 +119,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RPC1RibbonInputDF = RPC1RibbonInputDF.reset_index(drop = True)"
+    "RPC1RibbonInputDF.TargetParent.value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "RPC1RibbonInputDF.groupby([\"TargetParent\"])[\"SourceParentLabel\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "RPC1RibbonInputDF = RPC1RibbonInputDF.reset_index(drop = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "RPC1RibbonInputDF[[\"SourceParentLabel\", \"PSDArea\"]].groupby(\"SourceParentLabel\").describe()"
@@ -105,13 +160,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#Pull data from RC1\n",
     "for x in RC1Aiis: \n",
     "    query = \"SET NOCOUNT ON; EXEC RLPfeiffer.RibbonInputs @TargetCell= \" + \"'\" + x + \"'\"\n",
     "    RI = pd.read_sql(query, con = RC1)\n",
+    "    RI['Volume']= 'RC1'\n",
     "    RC1RibbonInputDF = RC1RibbonInputDF.append(RI)\n",
     "\n",
     "RC1RibbonInputDF"
@@ -120,7 +180,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#Fix all expanded names in RC! (subclasses of BCs beyond a and b are excluded in this analysis)\n",
@@ -136,7 +200,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "RC1RibbonInputDF = RC1RibbonInputDF.reset_index(drop = True)"
@@ -145,7 +213,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "RC1RibbonInputDF.SourceParentLabel.value_counts()"
@@ -155,6 +227,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "RC1RibbonInputDF.TargetParent.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RC1RibbonInputDF.groupby([\"TargetParent\"])[\"SourceParentLabel\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = RPC1RibbonInputDF\n",
@@ -167,313 +261,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RPC1RibbonInputDF[[\"SourceParentLabel\", \"PSDArea\"]].groupby(\"SourceParentLabel\").describe()"
+    "#concatinate the 2 datasets\n",
+    "frames = [RPC1RibbonInputDF, RC1RibbonInputDF]\n",
+    "CombinedRibbonInputDF = pd.concat(frames).reset_index()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "RC1RibbonInputDF[[\"SourceParentLabel\", \"PSDArea\"]].groupby(\"SourceParentLabel\").describe()"
+    "#Use this if/when you want to export something to an excel file (use this for tableau analysis)\n",
+    "CombinedRibbonInputDF.to_excel(r'D:\\Documents\\Data\\RPC1\\Aii_GAC_Project\\dfExports\\CombinedRibbonInput.xlsx')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RPC1RibbonInputDF[[\"SourceParentLabel\", \"PSDArea\"]].groupby(\"SourceParentLabel\").sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RC1RibbonInputDF[[\"SourceParentLabel\", \"PSDArea\"]].groupby(\"SourceParentLabel\").sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ax = plt.subplot()\n",
-    "sns.countplot(data=RPC1RibbonInputDF, x='SourceParent', order=RPC1RibbonInputDF.SourceParent.value_counts().index, hue=\"TargetParent\")\n",
-    "\n",
-    "ax.set_xticklabels(ax.get_xticklabels(), rotation=90, ha='right')\n",
-    "ax.legend(loc=\"upper right\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Make comparison bargraphs\n",
-    "f, ax = plt.subplots()\n",
-    "sns.countplot(data = RPC1RibbonInputDF, x ='SourceParentLabel', order=RPC1RibbonInputDF.SourceParentLabel.value_counts().index, hue=\"TargetParent\")\n",
-    "\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "ax.set_title('RPC1 Aii Ribbon Inputs')\n",
-    "ax.legend( title=\"Aii Target\",\n",
-    "          handletextpad=0, columnspacing=1,\n",
-    "          loc=\"upper right\",  frameon=True)\n",
-    "\n",
-    "g, ax2 = plt.subplots()\n",
-    "sns.countplot(data = RC1RibbonInputDF, x ='SourceParentLabel', order=RC1RibbonInputDF.SourceParentLabel.value_counts().index, hue=\"TargetParent\")\n",
-    "\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "ax2.set_title('RC1 Aii Ribbon Inputs')\n",
-    "ax2.legend( title=\"Aii Target\",\n",
-    "          handletextpad=0, columnspacing=1,\n",
-    "          loc=\"upper right\",  frameon=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#create simplified count-based DFs\n",
-    "RPC1InputDF = RPC1RibbonInputDF.groupby([\"TargetParent\",\"SourceParentLabel\"])[\"SourceParent\"].value_counts().to_frame(name = 'RibbonInputCount').reset_index()\n",
-    "RC1InputDF = RC1RibbonInputDF.groupby([\"TargetParent\",\"SourceParentLabel\"])[\"SourceParent\"].value_counts().to_frame(name = 'RibbonInputCount').reset_index()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RPC1InputDF\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
-    "RC1InputDF.groupby(\"TargetParent\")['SourceParentLabel'].value_counts()"
+    "CombinedRibbonInputDF.groupby(\"TargetParent\")['SourceParentLabel'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
     "RPC1InputDF.groupby(\"TargetParent\")['SourceParentLabel'].value_counts()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AiiGJs\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f, ax = plt.subplots()\n",
-    "sns.countplot(data = RPC1InputDF, x ='TargetParent', order=RPC1RibbonInputDF.TargetParent.value_counts().index, hue=\"SourceParentLabel\")\n",
-    "\n",
-    "ax.set_title(label=\"RPC1 Ribbon Input Sources\")\n",
-    "ax.set_xlabel('Target GAC Aii')\n",
-    "ax.legend(bbox_to_anchor=(1,0.5))\n",
-    "\n",
-    "g, ax2 = plt.subplots()\n",
-    "sns.countplot(data = RC1InputDF, x ='TargetParent', order=RC1RibbonInputDF.TargetParent.value_counts().index, hue=\"SourceParentLabel\")\n",
-    "\n",
-    "ax2.set_title(label=\"RC1 Ribbon Input Sources\")\n",
-    "ax2.set_xlabel('Target GAC Aii')\n",
-    "ax2.legend(bbox_to_anchor=(1,0.5))\n",
-    "\n",
-    "h, ax3 = plt.subplots()\n",
-    "sns.barplot(data= AiiGJs, x='TargetAii', y= \"GJCount\", hue = 'GJMotif')\n",
-    "ax3.set_title(label=\"GJ Motifs\")\n",
-    "ax3.set_xlabel('Target GAC Aii')\n",
-    "ax3.legend(bbox_to_anchor=(1,1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = SimpRPC1RibbonInputDF\n",
-    "df[\"TotalInput\"] = df.groupby('TargetParent')[\"RibbonInputCount\"].transform('sum')\n",
-    "df[\"PercentofInput\"] = df[\"RibbonInputCount\"] / df[\"TotalInput\"]*100\n",
-    "df[\"Volume\"]= 'RPC1'\n",
-    "\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = SimpRC1RibbonInputDF\n",
-    "df[\"TotalInput\"] = df.groupby('TargetParent')[\"RibbonInputCount\"].transform('sum')\n",
-    "df[\"PercentofInput\"] = df[\"RibbonInputCount\"] / df[\"TotalInput\"]*100\n",
-    "df[\"Volume\"]= 'RC1'\n",
-    "\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frames = [SimpRPC1RibbonInputDF, SimpRC1RibbonInputDF]\n",
-    "CombinedRI = pd.concat(frames).reset_index()\n",
-    "\n",
-    "CombinedRI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.relplot(x=\"RibbonInputCount\", y=\"PercentofInput\", hue=\"Volume\", style=\"SourceParentLabel\", data=CombinedRI);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "RPC1 = CombinedRI.loc[CombinedRI.Volume=='RPC1']\n",
-    "RC1 = CombinedRI.loc[CombinedRI.Volume=='RC1']\n",
-    "RodBC = CombinedRI.loc[CombinedRI.SourceParentLabel=='RodBC']\n",
-    "CBa = CombinedRI.loc[CombinedRI.SourceParentLabel=='CBa']\n",
-    "CBb = CombinedRI.loc[CombinedRI.SourceParentLabel=='CBb']\n",
-    "\n",
-    "sns.displot(CombinedRI, x=RodBC.RibbonInputCount, y=RodBC.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"RodBC Distributions\")\n",
-    "sns.displot(CombinedRI, x=CBa.RibbonInputCount, y=CBa.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"CBa Distributions\")\n",
-    "sns.displot(CombinedRI, x=CBb.RibbonInputCount, y=CBb.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"CBb Distributions\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AiiGJs =pd.read_excel('D:\\Documents\\Data\\RPC1\\Aii_GAC_Project\\dfExports\\AiiGJstats.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CombinedRI.drop(columns=[\"index\"], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CombinedRI.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CombinedRI.rename(columns={'RibbonInputCount':'RICount'}, inplace= True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Aii_Aii = AiiMerged.loc[AiiMerged.GJMotif=='GAC Aii::GAC Aii']\n",
-    "RodBCInput = AiiMerged.loc[AiiMerged.SourceParentLabel=='RodBC']\n",
-    "\n",
-    "Aii_Aii.reset_index(drop=True, inplace=True)\n",
-    "RodBCInput.reset_index(drop=True, inplace=True)\n",
-    "Aii_Aii.update(RodBCInput)\n",
-    "Aii_Aii\n",
-    "#RodBCInput"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CombinedRI\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#RPC1 = AiiMerged.loc[AiiMerged.Volume=='RPC1']\n",
-    "#RC1 = AiiMerged.loc[AiiMerged.Volume=='RC1']\n",
-    "Aii_Aii = AiiMerged.loc[AiiMerged.GJMotif=='GAC Aii::GAC Aii']\n",
-    "RodBCInput = AiiMerged.loc[AiiMerged.SourceParentLabel=='RodBC']\n",
-    "Aii_RodBC=AiiMerged.loc[AiiMerged.GJMotif=='GAC Aii::RodBC']\n",
-    "\n",
-    "\n",
-    "Aii_RodBC.reset_index(drop=True, inplace=True)\n",
-    "Aii_Aii.reset_index(drop=True, inplace=True)\n",
-    "RodBCInput.reset_index(drop=True, inplace=True)\n",
-    "\n",
-    "CombinedDF = RodBCInput\n",
-    "CombinedDF.update(Aii_RodBC)\n",
-    "CombinedDF.dropna(inplace=True)\n",
-    "\n",
-    "sns.scatterplot(\"PercentofRI\", \"PercentofGJInput\", data = CombinedDF, hue=\"TargetAii\", palette=\"Set2\")\n",
-    "\n",
-    "\n"
-   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "04635d289a519a1410467dd0afb0db42f9184808881ca68b2eb5a687a20a5a94"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -487,9 +326,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
