Added queries for input counts by cell label

--- a/GJPartners.ipynb
+++ b/GJPartners.ipynb
@@ -184,6 +184,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -212,6 +213,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -229,6 +231,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -246,6 +249,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -258,7 +262,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "AiiGJNoDuplicates.AiiQueried.value_counts()"
@@ -268,19 +277,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
    },
    "outputs": [],
    "source": [
-    "AiiGJPartnersDF.groupby(\"AiiQueried\")['GJMotif'].value_counts()"
+    "PartnersTotal = AiiGJPartnersDF.groupby([\"AiiQueried\", \"GJMotif\"])['SourceParent'].value_counts()\n",
+    "print(PartnersTotal)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -296,13 +308,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AiiGJNoDuplicates.loc[AiiGJNoDuplicates['GJMotif'] == 'GAC Aii::Unk']"
+    "# Assuming AiiGJPartnersDF is your DataFrame\n",
+    "SourceParentLabel = 'RodBC'\n",
+    "TargetParentLabel = 'RodBC'\n",
+    "\n",
+    "# Filter the DataFrame based on the conditions using query\n",
+    "filtered_df = AiiGJPartnersDF.query(\"AiiQueried == '262' and (SourceParentLabel == @SourceParentLabel or TargetParentLabel == @TargetParentLabel)\")\n",
+    "\n",
+    "# Count the number of unique Source Parents using value_counts\n",
+    "unique_source_parents = filtered_df['SourceParent'].value_counts().shape[0]\n",
+    "\n",
+    "# Print the result\n",
+    "print(\"RodBCs connected to AiiQueried==262:\", unique_source_parents)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "AiiGJNoDuplicates.loc[AiiGJNoDuplicates['GJMotif'] == 'GAC Aii::AC']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -325,6 +364,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -339,6 +379,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -354,6 +395,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -367,6 +409,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -380,6 +423,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
@@ -388,6 +432,43 @@
    "source": [
     "RodBCGJs=AiiGJPartnersDF.loc[AiiGJPartnersDF.GJMotif=='GAC Aii::RodBC'].reset_index()\n",
     "RodBCGJs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "RPC1 = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.Volume=='RPC1']\n",
+    "RC1 = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.Volume=='RC1']\n",
+    "Aii_Aii = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.GJMotif=='GAC Aii::GAC Aii']\n",
+    "Aii_CBb = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.GJMotif=='GAC Aii::CBb']\n",
+    "Aii_CBa = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.GJMotif=='GAC Aii::CBa']\n",
+    "\n",
+    "sns.displot(SimpAiiGJPartnerDF, x=Aii_Aii.GJCount, y=Aii_Aii.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"Aii::Aii GJs\")\n",
+    "sns.displot(SimpAiiGJPartnerDF, x=Aii_CBb.GJCount, y=Aii_CBb.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"Aii::CBb GJs\")\n",
+    "#sns.displot(SimpAiiGJPartnerDF, x=Aii_CBa.GJCount, y=Aii_CBa.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"Aii::CBaGJs\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Use this if/when you want to export something to an excel file\n",
+    "Aii_GJ = AiiGJNoDuplicates.to_excel('D:\\Documents\\Data\\RPC1\\Aii_GAC_Project\\dfExports\\AiiGJPartners.xlsx')"
    ]
   },
   {
