--- a/RibbonInputs.ipynb
+++ b/RibbonInputs.ipynb
@@ -191,6 +191,7 @@
     "RC1RibbonInputDF.replace('CBa?', \"CBa\", inplace=True)\n",
     "RC1RibbonInputDF.replace('CBa1', \"CBa\", inplace=True)\n",
     "RC1RibbonInputDF.replace('CBa2', \"CBa\", inplace=True)\n",
+    "RC1RibbonInputDF.replace('CBa2-3', \"CBa\", inplace=True)\n",
     "RC1RibbonInputDF.replace('CBa2-4', \"CBa\", inplace=True)\n",
     "RC1RibbonInputDF.replace('CBb6', \"CBb\", inplace=True)\n",
     "RC1RibbonInputDF.replace('CBb5', \"CBb\", inplace=True)\n",
@@ -292,7 +293,34 @@
    "outputs": [],
    "source": [
     "\n",
-    "CombinedRibbonInputDF.groupby(\"TargetParent\")['SourceParentLabel'].value_counts()"
+    "CombinedRibbonInputDF.groupby(\"TargetParent\")['SourceParent'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CombinedRibbonInputDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming CombinedRibbonInputDF is your DataFrame\n",
+    "\n",
+    "# Filter the DataFrame based on the condition using query\n",
+    "filtered_df = CombinedRibbonInputDF.query(\"SourceParentLabel == 'CBb'\")\n",
+    "\n",
+    "# Count the number of unique Source Parents using value_counts\n",
+    "unique_source_parents = filtered_df.groupby('TargetParent')['SourceParent'].nunique()\n",
+    "\n",
+    "# Print the result\n",
+    "print( unique_source_parents)\n"
    ]
   },
   {
@@ -305,8 +333,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "RPC1InputDF.groupby(\"TargetParent\")['SourceParentLabel'].value_counts()\n"
+    "CombinedRibbonInputDF.query(\"TargetParent==265\")[\"SourceParent\"].value_counts()"
    ]
   }
  ],
