Added some statistics testing

--- a/GJPartners.ipynb
+++ b/GJPartners.ipynb
@@ -309,17 +309,16 @@
    "outputs": [],
    "source": [
     "# Assuming AiiGJPartnersDF is your DataFrame\n",
-    "SourceParentLabel = 'RodBC'\n",
-    "TargetParentLabel = 'RodBC'\n",
+    "InputLabel = 'RodBC'\n",
     "\n",
     "# Filter the DataFrame based on the conditions using query\n",
-    "filtered_df = AiiGJPartnersDF.query(\"AiiQueried == '262' and (SourceParentLabel == @SourceParentLabel or TargetParentLabel == @TargetParentLabel)\")\n",
+    "filtered_df = AiiGJPartnersDF.query(\"AiiQueried == '192' and (SourceParentLabel == @InputLabel or TargetParentLabel == @InputLabel)\")\n",
     "\n",
     "# Count the number of unique Source Parents using value_counts\n",
     "unique_source_parents = filtered_df['SourceParent'].value_counts().shape[0]\n",
     "\n",
     "# Print the result\n",
-    "print(\"RodBCs connected to AiiQueried==262:\", unique_source_parents)\n",
+    "print(\"RodBCs connected:\", unique_source_parents)\n",
     "\n"
    ]
   },
@@ -335,29 +334,6 @@
    "outputs": [],
    "source": [
     "AiiGJNoDuplicates.loc[AiiGJNoDuplicates['GJMotif'] == 'GAC Aii::AC']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "f, ax = plt.subplots()\n",
-    "sns.countplot(data = AiiGJPartnersDF, x ='GJMotif', order=AiiGJPartnersDF.GJMotif.value_counts().index, hue=\"AiiQueried\")\n",
-    "\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "ax.set_title('Aii GJ Motifs')\n",
-    "ax.set_xticklabels(ax.get_xticklabels(), rotation=40, ha='right')\n",
-    "plt.tight_layout()\n",
-    "ax.legend( title=\"Aii Target\",\n",
-    "          handletextpad=0, columnspacing=1,\n",
-    "          loc=\"upper right\",  frameon=True)"
    ]
   },
   {
@@ -408,52 +384,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "sns.relplot(x=\"GJCount\", y=\"PercentofInput\", hue=\"Volume\", style=\"GJMotif\", data=SimpAiiGJPartnerDF);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "RodBCGJs=AiiGJPartnersDF.loc[AiiGJPartnersDF.GJMotif=='GAC Aii::RodBC'].reset_index()\n",
-    "RodBCGJs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "RPC1 = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.Volume=='RPC1']\n",
-    "RC1 = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.Volume=='RC1']\n",
-    "Aii_Aii = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.GJMotif=='GAC Aii::GAC Aii']\n",
-    "Aii_CBb = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.GJMotif=='GAC Aii::CBb']\n",
-    "Aii_CBa = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.GJMotif=='GAC Aii::CBa']\n",
     "\n",
-    "sns.displot(SimpAiiGJPartnerDF, x=Aii_Aii.GJCount, y=Aii_Aii.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"Aii::Aii GJs\")\n",
-    "sns.displot(SimpAiiGJPartnerDF, x=Aii_CBb.GJCount, y=Aii_CBb.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"Aii::CBb GJs\")\n",
-    "#sns.displot(SimpAiiGJPartnerDF, x=Aii_CBa.GJCount, y=Aii_CBa.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"Aii::CBaGJs\")\n"
+    "mean_std_df = SimpAiiGJPartnerDF.groupby(['Volume', 'GJMotif'])['PercentofInput'].agg(['mean', 'std'])\n",
+    "print(mean_std_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AiiGJNoDuplicates['GJArea'] = AiiGJNoDuplicates['GJArea']*1.0e-6"
    ]
   },
   {
@@ -461,41 +406,6 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Use this if/when you want to export something to an excel file\n",
-    "Aii_GJ = AiiGJNoDuplicates.to_excel('D:\\Documents\\Data\\RPC1\\Aii_GAC_Project\\dfExports\\AiiGJPartners.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "RPC1 = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.Volume=='RPC1']\n",
-    "RC1 = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.Volume=='RC1']\n",
-    "Aii_Aii = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.GJMotif=='GAC Aii::GAC Aii']\n",
-    "Aii_CBb = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.GJMotif=='GAC Aii::CBb']\n",
-    "Aii_CBa = SimpAiiGJPartnerDF.loc[SimpAiiGJPartnerDF.GJMotif=='GAC Aii::CBa']\n",
-    "\n",
-    "sns.displot(SimpAiiGJPartnerDF, x=Aii_Aii.GJCount, y=Aii_Aii.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"Aii::Aii GJs\")\n",
-    "sns.displot(SimpAiiGJPartnerDF, x=Aii_CBb.GJCount, y=Aii_CBb.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"Aii::CBb GJs\")\n",
-    "#sns.displot(SimpAiiGJPartnerDF, x=Aii_CBa.GJCount, y=Aii_CBa.PercentofInput, hue=\"Volume\", kind = \"kde\", fill = True).set(title = \"Aii::CBaGJs\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
