--- a/RibbonInputs.ipynb
+++ b/RibbonInputs.ipynb
@@ -191,6 +191,7 @@
     "RC1RibbonInputDF.replace('CBa?', \"CBa\", inplace=True)\n",
     "RC1RibbonInputDF.replace('CBa1', \"CBa\", inplace=True)\n",
     "RC1RibbonInputDF.replace('CBa2', \"CBa\", inplace=True)\n",
+    "RC1RibbonInputDF.replace('CBa1-2', \"CBa\", inplace=True)\n",
     "RC1RibbonInputDF.replace('CBa2-3', \"CBa\", inplace=True)\n",
     "RC1RibbonInputDF.replace('CBa2-4', \"CBa\", inplace=True)\n",
     "RC1RibbonInputDF.replace('CBb6', \"CBb\", inplace=True)\n",
@@ -311,16 +312,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assuming CombinedRibbonInputDF is your DataFrame\n",
     "\n",
-    "# Filter the DataFrame based on the condition using query\n",
-    "filtered_df = CombinedRibbonInputDF.query(\"SourceParentLabel == 'CBb'\")\n",
-    "\n",
-    "# Count the number of unique Source Parents using value_counts\n",
-    "unique_source_parents = filtered_df.groupby('TargetParent')['SourceParent'].nunique()\n",
+    "# Count the number of unique Source Parents for each Label using value_counts\n",
+    "unique_source_parents = CombinedRibbonInputDF.groupby(['Volume', 'TargetParent', 'SourceParentLabel'])['SourceParent'].nunique().to_frame(name = 'InputCells').reset_index()\n",
     "\n",
     "# Print the result\n",
     "print( unique_source_parents)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SimpRibbonInputDF = CombinedRibbonInputDF.groupby(['Volume', 'TargetParent'])[\"SourceParentLabel\"].value_counts().to_frame(name = 'RibbonCount').reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = SimpRibbonInputDF\n",
+    "df[\"TotalRibbons\"] = df.groupby('TargetParent')['RibbonCount'].transform('sum')\n",
+    "df[\"PercentofInput\"] = df[\"RibbonCount\"] / df[\"TotalRibbons\"]*100\n",
+    "\n",
+    "print(SimpRibbonInputDF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_std_df = SimpRibbonInputDF.groupby(['Volume', 'SourceParentLabel'])['PercentofInput'].agg(['mean', 'std'])\n",
+    "print(mean_std_df)"
    ]
   },
   {
